syntax = "proto3";

option go_package = "proto";

service wechat {
  rpc get_auth_access_token(get_auth_access_token_req) returns (get_auth_access_token_res) {}
  rpc get_user_info(get_user_info_req) returns (get_user_info_res) {}
  rpc get_access_token(get_access_token_req) returns (get_access_token_res) {}
  rpc get_ticket(get_ticket_req) returns (get_ticket_res) {}
  rpc get_jssdk(get_jssdk_req) returns (get_jssdk_res) {}
  rpc make_short_url(make_short_url_req) returns (make_short_url_res) {}
  rpc send_template(send_template_req) returns (send_template_res) {}
}

enum account {
  momo_za_huo_pu = 0;
}

enum template_define {
  bill_notice = 0;
}

message get_auth_access_token_req{
  account account = 1;
  string code = 2;
}

message get_auth_access_token_res{
  string access_token = 1;
  string refresh_token = 2;
  string openid = 3;
  string scope = 4;
}

message get_user_info_req{
  string auth_access_token = 1;
  string openid = 2;
}

message get_user_info_res{
  string openid = 1;
  string nickname = 2;
  string headimgurl = 3;
}

message get_access_token_req{
  account account = 1;
}

message get_access_token_res{
  string access_token = 1;
}

message get_ticket_req{
  account account = 1;
}

message get_ticket_res{
  string ticket = 1;
}

message get_jssdk_req{
  account account = 1;
  string url = 2;
}

message get_jssdk_res{
  string appid = 1;
  string noncestr = 2;
  string timestamp = 3;
  string signature = 4;
}

message make_short_url_req{
  account account = 1;
  string url = 2;
}

message make_short_url_res{
  string short_url = 1;
}

message template{
  string touser = 1;
  string template_id = 2;
  string url = 3;
  map<string, template_item> data = 4;
}

message template_item{
  string value = 1;
  string color = 2;
}

message send_template_req{
  account account = 1;
  template_define template_define = 2;
  template template = 3;
}

message send_template_res{

}



//protoc -I . --go_out=plugins=grpc:. api/proto/proto.proto